--- a/src/page/Register/Register.css
+++ b/src/page/Register/Register.css
@@ -1,3 +1,10 @@
 .reg-container{
-    width: 400px;;
+    width: 400px;
+}
+.btn-google{
+    width:100%;
+    padding-left:8%;
+    padding-right: 8%;
+    margin-bottom:10px;
+    padding-bottom: 10px;
 }
