--- a/src/page/Login/Login.css
+++ b/src/page/Login/Login.css
@@ -1,3 +1,8 @@
 .login-container{
     width: 400px;
 }
+@media only screen  and (max-width: 687px){
+    .login-container{
+        width:96%;
+    }
+}
