--- a/src/page/Register/Register.css
+++ b/src/page/Register/Register.css
@@ -8,3 +8,8 @@
     margin-bottom:10px;
     padding-bottom: 10px;
 }
+@media only screen  and (max-width: 687px){
+    .reg-container{
+        width: 96%;
+    }
+}
