--- a/src/page/MoreDetails/MoreDetails.css
+++ b/src/page/MoreDetails/MoreDetails.css
@@ -28,4 +28,12 @@
     .area-area{
         width: 300px;
     }
+
+    /* update Review  */
+  
 }
+  .update-r{
+        background-image: linear-gradient(rgba(0,0,0,0.80), rgba(0,0,0,0.80)), url('../../image/pic1.jpg');
+        background-size: cover;
+        width:100%;
+    }
