--- a/src/page/Blog/Blog.css
+++ b/src/page/Blog/Blog.css
@@ -8,20 +8,20 @@
     text-align: center;
 }
 .qus{
-    background-color:rgb(210, 176, 131);
+    background-color:rgb(0, 0, 0);
     margin:2%;
     padding:3%;
     border-radius:12px;
-    box-shadow:5px 10px 20px black;
-    color: black;
+    color: white;
 }
 .qus:hover{
-    background-color:rgb(109, 90, 65);
-    color: white;
+    background-color:rgb(80, 177, 80);
+    color: black;
 }
 @media only screen  and (max-width: 687px){
     .qus{
        margin-top:20px;
        margin-bottom: 20px;
+       padding:20px;
     }
 }
